--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Admin Service for Managing other Services running in the backend",
   "main": "admin.js",
   "scripts": {
-    "dev-run": "nodemon admin.js",
+    "dev-start": "nodemon admin.js",
     "dev-sequelize-migrate": "sequelize db:migrate",
     "dev-sequelize-unmigrate": "sequelize db:migrate:undo --name CelebProfilesTable.js"
   },
