--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "Admin Service for Managing other Services running in the backend",
   "main": "admin.js",
   "scripts": {
-    "dev-start": "node admin.js",
-    "dev-sequelize-migrate": "sequelize db:migrate",
-    "dev-sequelize-unmigrate": "sequelize db:migrate:undo --name CelebProfilesTable.js"
+    "dev-start": "set NODE_ENV=developement && node admin.js",
+    "dev-sequelize-migrate": "set NODE_ENV=developement && sequelize db:migrate",
+    "dev-sequelize-unmigrate": "set NODE_ENV=developement && sequelize db:migrate:undo --name CelebProfilesTable.js",
+    "prod-start": "set NODE_ENV=production && node admin.js",
+    "prod-sequelize-migrate": "set NODE_ENV=production && sequelize db:migrate",
+    "prod-sequelize-unmigrate": "set NODE_ENV=production && sequelize db:migrate:undo --name CelebProfilesTable.js"
   },
   "author": "Sarthak Joshi",
   "license": "ISC",
