--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-PORT=7000
+PORT=5000
 MAGIC_WORD=$2y$05$ix.FIPPCkJo5CqROVnbfxe37JsGzFCYaR3OR4u2mjXbM7HA0tKt9i
 API_KEY=AIzaSyB2qSMucYaw5C08x0hLTeMgNsal3rNaUiY
+NODE_ENV=development
