AWS SDK Implementation

--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 PORT=5000
 MAGIC_WORD=$2y$05$ix.FIPPCkJo5CqROVnbfxe37JsGzFCYaR3OR4u2mjXbM7HA0tKt9i
-API_KEY=AIzaSyB2qSMucYaw5C08x0hLTeMgNsal3rNaUiY
+ACCESS_KEY=AKIAYVBNUWLOF5SYRCMT
+SECRET_KEY=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
 NODE_ENV=development
+CDN_DNS=d30ijocwg16otn.cloudfront.net
+CELEB_IMAGE_BUCKET=bliss-celeb-images
