--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
   "author": "Sarthak Joshi",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.787.0",
     "body-parser": "1.19.0",
+    "chalk": "^4.1.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "firebase-admin": "^9.2.0",
+    "http-status-code": "^2.1.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "pg": "8.3.3",
     "pg-hstore": "2.3.3",
     "sequelize": "6.3.5",
     "sequelize-cli": "^6.2.0",
-    "chalk": "^4.1.0"
+    "sharp": "^0.26.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
